--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,5 +1,6 @@
 
 .card {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     width: 18rem;
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.6));
     border-radius: 10px;
@@ -16,8 +17,8 @@
 .card-img-top {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    height: 200px;
-    object-fit: cover;
+    height: 300px;
+    
 }
 
 .card-body {
@@ -49,3 +50,19 @@
     background-color: #fff;
     color: #000;
 }
+
+.btn-warning {
+    color: #070000;
+    border: none;
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.btn-warning:hover {
+    background-color: #fff;
+    color: #000;
+}
+
