--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -36,19 +36,19 @@
 }
 
 .btn-light {
-    color: #070000;
+    color: #fafafa !important;
     background-color: rgb(34, 63, 126);
     border: none;
     text-transform: uppercase;
     font-size: 0.9rem;
     padding: 10px 20px;
     border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: background-color 0.1s ease, color 0.1s ease;
 }
 
 .btn-light:hover {
     background-color: #fff;
-    color: #000;
+    color: #000 !important;
 }
 
 .btn-warning {
@@ -58,11 +58,22 @@
     font-size: 0.9rem;
     padding: 10px 20px;
     border-radius: 5px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+    transition: background-color 0.1s ease, color 0.1s ease;
 }
 
 .btn-warning:hover {
     background-color: #fff;
+    color: #000;
+}
+
+.disabled-btn {
+    opacity: 0.6;
+    cursor: not-allowed;
+    background-color: #aaa;
+}
+
+.disabled-btn:hover {
+    background-color: #aaa;
     color: #000;
 }
 
