--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -11,9 +11,10 @@
     width: 50px;
     height: 50px;
     border: 4px solid rgba(0, 0, 0, 0.1);
-    border-top: 4px solid #000;
+    border-top: 4px solid #00ffff;
     border-radius: 50%;
     animation: spin 1s linear infinite;
+
 }
 
 @keyframes spin {
